# SocialMedia

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  requirements.txt  server.py
.claude/: settings.local.json
.qwen/: settings.json  settings.json.orig
X_fetch/: .env  ARCHITECTURE.md  PRODUCTION_HARDENING.md  README.md  main.py  requirements.txt  smoke_test.py  smoke_test_tweetxtract.py
X_fetch/core/config/: settings.py
X_fetch/core/models/: tweet.py
X_fetch/smoke_test_results/: RESULTS_SUMMARY.md  discovered_urls.txt  smoke_test_results_20260525_065657.json  smoke_test_results_20260525_065657.txt
agent_runtime/: __init__.py  llm.py  runtime.py  scheduler.py  tools_registry.py
config/: torrc
ecosystem/agents/: action_planner.yaml  dashboard_layout_builder.yaml  master.yaml  report_writer.yaml  researcher.yaml
ecosystem/config/: system.yaml
ecosystem/teams/: news_reporter.yaml
ecosystem/tools/: facebook_search.yaml  fetch_feeds.yaml  fetch_trends24.yaml  searxng_search.yaml  terminal.yaml  websearch_general.yaml  xfetch_discover.yaml
ecosystem/tools-impl/: facebook_search.py  fetch_feeds.py  fetch_trends24.py  searxng_search.py  terminal.py  websearch_general.py  xfetch_discover.py  xfetch_extract.py
searxng-config/: searxng.yml  settings.yml
ui_react/: index.html  package-lock.json  package.json  vite.config.js
ui_react/src/: App.jsx  main.jsx
yukta/: .env.example  .gitignore  MANIFEST.in  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  YUKTA_ARCHITECTURE.md  YUKTA_ECOSYSTEM.md  __init__.py  pyproject.toml  requirements.txt  setup.py  verify_unified_installation.py
yukta/docs/: FUTURE_ARCHITECTURE.md  MODERN_LOGGING.md  YAML_REFERENCE.md  YAML_STRUCTURE.md
yukta/examples/: callbacks_example.py  mcp_test.py  parallel_tool_execution_example.py  permissions_and_sandbox_example.py  remote_mcp_example.py  sample.py  state_persistence_example.py  team_coordinator_example.py
yukta/yukta/: __init__.py
yukta/yukta/api/: __init__.py  allocator.py  compiler.py  coordinator.py  exceptions.py  loader.py  models.py  modern_logger.py  orchestrator.py  reader.py  resolver.py  runner.py  transformer.py  validator.py
yukta/yukta/cli/: __init__.py  main.py  templates.py
yukta/yukta/config/: __init__.py  agent_config.py  config.py  memory_config.py  system_prompt.py
yukta/yukta/core/: __init__.py  memory.py  storage.py
yukta/yukta/core/Agent/: __init__.py  agent.py  agent_builder.py  agent_callbacks.py
yukta/yukta/core/Chat/: __init__.py  chat.py  llm_response.py  message.py
yukta/yukta/core/Clients/: __init__.py  base_client.py  hf_client.py  llmclientfactory.py  lmstudio_client.py  ollama_client.py  remote_client.py  sglang_client.py  vllm_client.py
yukta/yukta/ecosystem/: __init__.py  compiler.py  exceptions.py  loader.py  resolver.py  runner.py  validator.py
yukta/yukta/instrumentation/: __init__.py  decorators.py  extractors.py  tracer.py  tracing.py
yukta/yukta/tools/: __init__.py  mcp_tool.py  sandbox.py  tool.py  tools_pro.py  utils.py
(+88 files in other folders)
