[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "yukta"
version = "2.1.0"
description = "A comprehensive, modular agent system with Memory management, KV cache optimization, and cost-efficient LLM integration"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "VCoder4646", email = "vasanthwork0475@gmail.com"}
]
keywords = ["agent", "llm", "ai", "memory", "tools", "cache"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
yukta = "yukta.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/VCoder4646/yukta"
Documentation = "https://github.com/VCoder4646/yukta/blob/main/README.md"
Repository = "https://github.com/VCoder4646/yukta"
"Bug Reports" = "https://github.com/VCoder4646/yukta/issues"

[tool.setuptools]
packages = ["yukta", "yukta.core", "yukta.tools", "yukta.config", "yukta.instrumentation", "yukta.cli", "yukta.ecosystem", "yukta.api"]

[tool.setuptools.package-data]
yukta = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require external services or file-system fixtures",
    "network: marks tests that hit real network services",
    "slow: marks tests that are expected to take longer than unit tests",
]
addopts = "-v --cov=yukta --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true